# apprise-rmcp

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  config.toml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  install.sh  lefthook.yml  release-please-config.json  server.json
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  docker-publish.yml  openwiki-update.yml  release-please.yml  release.yml  sync-marketplace-no-mcp.yml
config/: Dockerfile
docs/: INVENTORY.md  QUICKSTART.md  README.md  RUST.md
docs/sessions/: 2026-07-18-comprehensive-review-remediation-and-merge.md  2026-07-23-runtime-configuration-audit.md
docs/stack/: ARCH.md  CLAUDE.md  PRE-REQS.md  TECH.md
openwiki/: .last-update.json
plugins/apprise/: .mcp.json
plugins/apprise/.claude-plugin/: plugin.json
plugins/apprise/.codex-plugin/: plugin.json
plugins/apprise/hooks/: hooks.json  plugin-setup.sh
plugins/apprise/scripts/: plugin-setup.sh
plugins/apprise/skills/apprise/: SKILL.md
scripts/: block-env-commits.sh  bump-version.sh  check-ci-policy.sh  check-runtime-current.sh  check-version-sync.sh  install.sh  refresh-docs.sh  rollout-container.sh  sync-cargo.sh  test-bootstrap.sh  test-install.sh  validate-plugin-layout.sh
scripts/openwiki/: package-lock.json  package.json
src/: app.rs  apprise.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  observability.rs  runtime.rs  token_limit.rs
src/logging/: file.rs
src/mcp/: rmcp_server.rs  routes.rs  schemas.rs  tools.rs
tests/: cli_parse.rs  docs-contract.sh  rollout-container.sh  setup_contract.rs  upstream_contract.rs
tests/mcporter/: test-tools.sh
xtask/: Cargo.toml
