[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "apprise-mcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
description = "Apprise MCP server — universal push notification bridge"
autobins = false

[[bin]]
name = "rapprise"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Platform directories
dirs = "5"

# Errors
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

[features]
test-support = []

[dev-dependencies]
apprise-mcp = { path = ".", features = ["test-support"] }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.6.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
