[workspace]
members = [".", "xtask"]
resolver = "2"

[package]
name = "apprise-mcp"
version = "0.1.3"
edition = "2021"
rust-version = "1.90"
categories = ["command-line-utilities", "development-tools"]
keywords = ["mcp", "apprise", "notifications", "rmcp", "homelab"]
repository = "https://github.com/jmagar/apprise-rmcp"
homepage = "https://github.com/jmagar/apprise-rmcp#readme"
description = "Rust MCP server and CLI for Apprise notification fan-out across delivery backends with stdio/HTTP transports and auth."
autobins = false

[[bin]]
name = "rapprise"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / MCP transport
axum = "0.8"
rmcp = { version = "1.6.0", default-features = false, features = [
  "server",
  "macros",
  "transport-streamable-http-server",
  "transport-io",
] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
toml = "0.8"

# OAuth + JWT
lab-auth = { git = "https://github.com/jmagar/lab.git", rev = "87cec3241f9baef22335de9cc8629ebbcd8ba047", package = "lab-auth" }
url = "2"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"

# Platform directories
dirs = "5"

# Errors
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
dotenvy = "0.15.7"
tempfile = "3"

[features]
test-support = []

[dev-dependencies]
apprise-mcp = { path = ".", features = ["test-support"] }
tokio = { version = "1", features = ["full"] }
rmcp = { version = "1.6.0", default-features = false, features = [
  "client",
  "transport-child-process",
] }
tower = { version = "0.5", features = ["util"] }
